# TimeSeriesBitcoin-NguyenDinhNam

./: main.py  pyproject.toml
datasets/: coins.parquet
notebooks/: vis.ipynb
