[project]
name = "timeseriesbitcoin-nguyendinhnam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
]
